--- a/train-cifar10.ipynb
+++ b/train-cifar10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using downloaded and verified file: ./data/cifar10_trainval.tar.gz\n",
+      "Extracting ./data/cifar10_trainval.tar.gz to ./data\n",
+      "Files already downloaded and verified\n",
+      "Using downloaded and verified file: ./data/cifar10_trainval.tar.gz\n",
+      "Extracting ./data/cifar10_trainval.tar.gz to ./data\n",
+      "Files already downloaded and verified\n",
+      "Using downloaded and verified file: ./data/cifar10-batches-images-test.tar.gz\n",
+      "Extracting ./data/cifar10-batches-images-test.tar.gz to ./data\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "# Call the dataset Loader\n",
     "trainset = CIFAR10(root=DATAROOT, train=True, download=True, transform=transform_train)\n",
@@ -247,9 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on GPU...\n"
+     ]
+    }
+   ],
    "source": [
     "# Specify the device for computation\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -263,9 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training from scratch ...\n",
+      "Starting from learning rate 0.009000:\n"
+     ]
+    }
+   ],
    "source": [
     "# FLAG for loading the pretrained model\n",
     "TRAIN_FROM_SCRATCH = True\n",
@@ -298,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +355,377 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-10-03 01:35:32.837683\n",
+      "Epoch 0:\n",
+      "176\n",
+      "Initial loss: 2.3052\n",
+      "Training loss: 1.6912, Training accuracy: 0.4353\n",
+      "2019-10-03 01:35:50.342440\n",
+      "Validation...\n",
+      "Validation loss: 1.2701, Validation accuracy: 0.5516\n",
+      "Saving ...\n",
+      "2019-10-03 01:35:52.189983\n",
+      "Epoch 1:\n",
+      "176\n",
+      "Training loss: 1.0005, Training accuracy: 0.6540\n",
+      "2019-10-03 01:36:04.654475\n",
+      "Validation...\n",
+      "Validation loss: 1.0196, Validation accuracy: 0.6440\n",
+      "Saving ...\n",
+      "2019-10-03 01:36:06.637886\n",
+      "Epoch 2:\n",
+      "176\n",
+      "Training loss: 0.7532, Training accuracy: 0.7402\n",
+      "2019-10-03 01:36:19.171582\n",
+      "Validation...\n",
+      "Validation loss: 0.7737, Validation accuracy: 0.7294\n",
+      "Saving ...\n",
+      "2019-10-03 01:36:21.155081\n",
+      "Epoch 3:\n",
+      "176\n",
+      "Training loss: 0.6245, Training accuracy: 0.7835\n",
+      "2019-10-03 01:36:34.035050\n",
+      "Validation...\n",
+      "Validation loss: 1.1660, Validation accuracy: 0.6298\n",
+      "2019-10-03 01:36:35.376109\n",
+      "Epoch 4:\n",
+      "176\n",
+      "Training loss: 0.5480, Training accuracy: 0.8149\n",
+      "2019-10-03 01:36:47.337847\n",
+      "Validation...\n",
+      "Validation loss: 0.8940, Validation accuracy: 0.7024\n",
+      "2019-10-03 01:36:48.475277\n",
+      "Epoch 5:\n",
+      "176\n",
+      "Training loss: 0.4882, Training accuracy: 0.8363\n",
+      "2019-10-03 01:37:00.649238\n",
+      "Validation...\n",
+      "Validation loss: 0.7432, Validation accuracy: 0.7512\n",
+      "Current learning rate has decayed to 0.001800\n",
+      "Saving ...\n",
+      "2019-10-03 01:37:02.361105\n",
+      "Epoch 6:\n",
+      "176\n",
+      "Training loss: 0.4328, Training accuracy: 0.8520\n",
+      "2019-10-03 01:37:14.952368\n",
+      "Validation...\n",
+      "Validation loss: 1.2349, Validation accuracy: 0.6638\n",
+      "2019-10-03 01:37:16.043384\n",
+      "Epoch 7:\n",
+      "176\n",
+      "Training loss: 0.3838, Training accuracy: 0.8673\n",
+      "2019-10-03 01:37:28.598785\n",
+      "Validation...\n",
+      "Validation loss: 0.7402, Validation accuracy: 0.7594\n",
+      "Saving ...\n",
+      "2019-10-03 01:37:30.346306\n",
+      "Epoch 8:\n",
+      "176\n",
+      "Training loss: 0.3390, Training accuracy: 0.8828\n",
+      "2019-10-03 01:37:43.237443\n",
+      "Validation...\n",
+      "Validation loss: 0.5422, Validation accuracy: 0.8210\n",
+      "Saving ...\n",
+      "2019-10-03 01:37:44.975915\n",
+      "Epoch 9:\n",
+      "176\n",
+      "Training loss: 0.3027, Training accuracy: 0.8940\n",
+      "2019-10-03 01:37:57.526691\n",
+      "Validation...\n",
+      "Validation loss: 0.5177, Validation accuracy: 0.8292\n",
+      "Saving ...\n",
+      "2019-10-03 01:37:59.353605\n",
+      "Epoch 10:\n",
+      "176\n",
+      "Training loss: 0.2866, Training accuracy: 0.9012\n",
+      "2019-10-03 01:38:12.131008\n",
+      "Validation...\n",
+      "Validation loss: 0.5884, Validation accuracy: 0.8180\n",
+      "Current learning rate has decayed to 0.000360\n",
+      "2019-10-03 01:38:13.330617\n",
+      "Epoch 11:\n",
+      "176\n",
+      "Training loss: 0.2509, Training accuracy: 0.9141\n",
+      "2019-10-03 01:38:25.527954\n",
+      "Validation...\n",
+      "Validation loss: 0.6189, Validation accuracy: 0.8054\n",
+      "2019-10-03 01:38:26.725139\n",
+      "Epoch 12:\n",
+      "176\n",
+      "Training loss: 0.2303, Training accuracy: 0.9188\n",
+      "2019-10-03 01:38:38.786583\n",
+      "Validation...\n",
+      "Validation loss: 0.6723, Validation accuracy: 0.7986\n",
+      "2019-10-03 01:38:39.886666\n",
+      "Epoch 13:\n",
+      "176\n",
+      "Training loss: 0.1963, Training accuracy: 0.9287\n",
+      "2019-10-03 01:38:52.163297\n",
+      "Validation...\n",
+      "Validation loss: 0.5778, Validation accuracy: 0.8258\n",
+      "2019-10-03 01:38:53.265969\n",
+      "Epoch 14:\n",
+      "176\n",
+      "Training loss: 0.1880, Training accuracy: 0.9332\n",
+      "2019-10-03 01:39:05.381495\n",
+      "Validation...\n",
+      "Validation loss: 0.5444, Validation accuracy: 0.8346\n",
+      "Saving ...\n",
+      "2019-10-03 01:39:07.081660\n",
+      "Epoch 15:\n",
+      "176\n",
+      "Training loss: 0.1746, Training accuracy: 0.9403\n",
+      "2019-10-03 01:39:19.571346\n",
+      "Validation...\n",
+      "Validation loss: 0.5894, Validation accuracy: 0.8268\n",
+      "Current learning rate has decayed to 0.000072\n",
+      "2019-10-03 01:39:20.726379\n",
+      "Epoch 16:\n",
+      "176\n",
+      "Training loss: 0.1516, Training accuracy: 0.9447\n",
+      "2019-10-03 01:39:33.105232\n",
+      "Validation...\n",
+      "Validation loss: 0.5622, Validation accuracy: 0.8428\n",
+      "Saving ...\n",
+      "2019-10-03 01:39:34.900606\n",
+      "Epoch 17:\n",
+      "176\n",
+      "Training loss: 0.1358, Training accuracy: 0.9506\n",
+      "2019-10-03 01:39:47.880891\n",
+      "Validation...\n",
+      "Validation loss: 0.6282, Validation accuracy: 0.8344\n",
+      "2019-10-03 01:39:49.081551\n",
+      "Epoch 18:\n",
+      "176\n",
+      "Training loss: 0.1423, Training accuracy: 0.9506\n",
+      "2019-10-03 01:40:01.375643\n",
+      "Validation...\n",
+      "Validation loss: 0.4839, Validation accuracy: 0.8614\n",
+      "Saving ...\n",
+      "2019-10-03 01:40:03.171490\n",
+      "Epoch 19:\n",
+      "176\n",
+      "Training loss: 0.1254, Training accuracy: 0.9572\n",
+      "2019-10-03 01:40:16.065524\n",
+      "Validation...\n",
+      "Validation loss: 0.4855, Validation accuracy: 0.8624\n",
+      "Saving ...\n",
+      "2019-10-03 01:40:17.832818\n",
+      "Epoch 20:\n",
+      "176\n",
+      "Training loss: 0.1024, Training accuracy: 0.9604\n",
+      "2019-10-03 01:40:30.658956\n",
+      "Validation...\n",
+      "Validation loss: 0.5883, Validation accuracy: 0.8446\n",
+      "Current learning rate has decayed to 0.000014\n",
+      "2019-10-03 01:40:31.836960\n",
+      "Epoch 21:\n",
+      "176\n",
+      "Training loss: 0.1103, Training accuracy: 0.9620\n",
+      "2019-10-03 01:40:44.129737\n",
+      "Validation...\n",
+      "Validation loss: 0.5295, Validation accuracy: 0.8558\n",
+      "2019-10-03 01:40:45.234304\n",
+      "Epoch 22:\n",
+      "176\n",
+      "Training loss: 0.0896, Training accuracy: 0.9687\n",
+      "2019-10-03 01:40:57.854721\n",
+      "Validation...\n",
+      "Validation loss: 0.6776, Validation accuracy: 0.8240\n",
+      "2019-10-03 01:40:59.038437\n",
+      "Epoch 23:\n",
+      "176\n",
+      "Training loss: 0.0829, Training accuracy: 0.9696\n",
+      "2019-10-03 01:41:11.509683\n",
+      "Validation...\n",
+      "Validation loss: 0.6841, Validation accuracy: 0.8222\n",
+      "2019-10-03 01:41:12.611126\n",
+      "Epoch 24:\n",
+      "176\n",
+      "Training loss: 0.0859, Training accuracy: 0.9697\n",
+      "2019-10-03 01:41:25.115024\n",
+      "Validation...\n",
+      "Validation loss: 0.5920, Validation accuracy: 0.8518\n",
+      "2019-10-03 01:41:26.191024\n",
+      "Epoch 25:\n",
+      "176\n",
+      "Training loss: 0.0792, Training accuracy: 0.9716\n",
+      "2019-10-03 01:41:38.506078\n",
+      "Validation...\n",
+      "Validation loss: 0.5977, Validation accuracy: 0.8532\n",
+      "Current learning rate has decayed to 0.000003\n",
+      "2019-10-03 01:41:39.751524\n",
+      "Epoch 26:\n",
+      "176\n",
+      "Training loss: 0.0660, Training accuracy: 0.9750\n",
+      "2019-10-03 01:41:52.242945\n",
+      "Validation...\n",
+      "Validation loss: 0.6363, Validation accuracy: 0.8514\n",
+      "2019-10-03 01:41:53.556147\n",
+      "Epoch 27:\n",
+      "176\n",
+      "Training loss: 0.0662, Training accuracy: 0.9769\n",
+      "2019-10-03 01:42:05.985808\n",
+      "Validation...\n",
+      "Validation loss: 0.6924, Validation accuracy: 0.8358\n",
+      "2019-10-03 01:42:07.225930\n",
+      "Epoch 28:\n",
+      "176\n",
+      "Training loss: 0.0643, Training accuracy: 0.9776\n",
+      "2019-10-03 01:42:19.571020\n",
+      "Validation...\n",
+      "Validation loss: 0.6202, Validation accuracy: 0.8512\n",
+      "2019-10-03 01:42:20.786521\n",
+      "Epoch 29:\n",
+      "176\n",
+      "Training loss: 0.0523, Training accuracy: 0.9795\n",
+      "2019-10-03 01:42:33.672984\n",
+      "Validation...\n",
+      "Validation loss: 0.6543, Validation accuracy: 0.8518\n",
+      "2019-10-03 01:42:35.032966\n",
+      "Epoch 30:\n",
+      "176\n",
+      "Training loss: 0.0527, Training accuracy: 0.9805\n",
+      "2019-10-03 01:42:47.405036\n",
+      "Validation...\n",
+      "Validation loss: 0.5682, Validation accuracy: 0.8644\n",
+      "Current learning rate has decayed to 0.000001\n",
+      "Saving ...\n",
+      "2019-10-03 01:42:49.325943\n",
+      "Epoch 31:\n",
+      "176\n",
+      "Training loss: 0.0488, Training accuracy: 0.9827\n",
+      "2019-10-03 01:43:01.894792\n",
+      "Validation...\n",
+      "Validation loss: 0.5032, Validation accuracy: 0.8768\n",
+      "Saving ...\n",
+      "2019-10-03 01:43:03.887977\n",
+      "Epoch 32:\n",
+      "176\n",
+      "Training loss: 0.0547, Training accuracy: 0.9814\n",
+      "2019-10-03 01:43:16.905256\n",
+      "Validation...\n",
+      "Validation loss: 0.6288, Validation accuracy: 0.8476\n",
+      "2019-10-03 01:43:18.070746\n",
+      "Epoch 33:\n",
+      "176\n",
+      "Training loss: 0.0443, Training accuracy: 0.9828\n",
+      "2019-10-03 01:43:30.570937\n",
+      "Validation...\n",
+      "Validation loss: 0.5446, Validation accuracy: 0.8742\n",
+      "2019-10-03 01:43:31.673685\n",
+      "Epoch 34:\n",
+      "176\n",
+      "Training loss: 0.0466, Training accuracy: 0.9828\n",
+      "2019-10-03 01:43:44.085301\n",
+      "Validation...\n",
+      "Validation loss: 0.6053, Validation accuracy: 0.8554\n",
+      "2019-10-03 01:43:45.264174\n",
+      "Epoch 35:\n",
+      "176\n",
+      "Training loss: 0.0406, Training accuracy: 0.9863\n",
+      "2019-10-03 01:43:58.077641\n",
+      "Validation...\n",
+      "Validation loss: 0.6554, Validation accuracy: 0.8572\n",
+      "Current learning rate has decayed to 0.000000\n",
+      "2019-10-03 01:43:59.355827\n",
+      "Epoch 36:\n",
+      "176\n",
+      "Training loss: 0.0369, Training accuracy: 0.9873\n",
+      "2019-10-03 01:44:12.426521\n",
+      "Validation...\n",
+      "Validation loss: 0.5613, Validation accuracy: 0.8772\n",
+      "Saving ...\n",
+      "2019-10-03 01:44:14.401365\n",
+      "Epoch 37:\n",
+      "176\n",
+      "Training loss: 0.0303, Training accuracy: 0.9870\n",
+      "2019-10-03 01:44:26.966992\n",
+      "Validation...\n",
+      "Validation loss: 0.7094, Validation accuracy: 0.8502\n",
+      "2019-10-03 01:44:28.087236\n",
+      "Epoch 38:\n",
+      "176\n",
+      "Training loss: 0.0426, Training accuracy: 0.9851\n",
+      "2019-10-03 01:44:40.581536\n",
+      "Validation...\n",
+      "Validation loss: 0.6771, Validation accuracy: 0.8502\n",
+      "2019-10-03 01:44:41.680620\n",
+      "Epoch 39:\n",
+      "176\n",
+      "Training loss: 0.0343, Training accuracy: 0.9882\n",
+      "2019-10-03 01:44:54.263369\n",
+      "Validation...\n",
+      "Validation loss: 0.5811, Validation accuracy: 0.8756\n",
+      "2019-10-03 01:44:55.452388\n",
+      "Epoch 40:\n",
+      "176\n",
+      "Training loss: 0.0383, Training accuracy: 0.9870\n",
+      "2019-10-03 01:45:07.834537\n",
+      "Validation...\n",
+      "Validation loss: 0.5510, Validation accuracy: 0.8740\n",
+      "Current learning rate has decayed to 0.000000\n",
+      "2019-10-03 01:45:08.969018\n",
+      "Epoch 41:\n",
+      "176\n",
+      "Training loss: 0.0298, Training accuracy: 0.9903\n",
+      "2019-10-03 01:45:21.257135\n",
+      "Validation...\n",
+      "Validation loss: 0.5939, Validation accuracy: 0.8668\n",
+      "2019-10-03 01:45:22.621005\n",
+      "Epoch 42:\n",
+      "176\n",
+      "Training loss: 0.0324, Training accuracy: 0.9882\n",
+      "2019-10-03 01:45:35.726718\n",
+      "Validation...\n",
+      "Validation loss: 0.6261, Validation accuracy: 0.8650\n",
+      "2019-10-03 01:45:37.079401\n",
+      "Epoch 43:\n",
+      "176\n",
+      "Training loss: 0.0353, Training accuracy: 0.9872\n",
+      "2019-10-03 01:45:49.582853\n",
+      "Validation...\n",
+      "Validation loss: 0.5704, Validation accuracy: 0.8720\n",
+      "2019-10-03 01:45:50.741110\n",
+      "Epoch 44:\n",
+      "176\n",
+      "Training loss: 0.0333, Training accuracy: 0.9887\n",
+      "2019-10-03 01:46:03.503519\n",
+      "Validation...\n",
+      "Validation loss: 0.5668, Validation accuracy: 0.8688\n",
+      "2019-10-03 01:46:04.877016\n",
+      "Epoch 45:\n",
+      "176\n",
+      "Training loss: 0.0250, Training accuracy: 0.9900\n",
+      "2019-10-03 01:46:18.322679\n",
+      "Validation...\n",
+      "Validation loss: 0.6044, Validation accuracy: 0.8682\n",
+      "Current learning rate has decayed to 0.000000\n",
+      "2019-10-03 01:46:19.673009\n",
+      "Epoch 46:\n",
+      "176\n",
+      "Training loss: 0.0336, Training accuracy: 0.9883\n",
+      "2019-10-03 01:46:32.949935\n",
+      "Validation...\n",
+      "Validation loss: 0.6601, Validation accuracy: 0.8552\n",
+      "2019-10-03 01:46:34.168709\n",
+      "Epoch 47:\n",
+      "176\n",
+      "Training loss: 0.0243, Training accuracy: 0.9905\n",
+      "2019-10-03 01:46:47.270598\n",
+      "Validation...\n",
+      "Validation loss: 0.6502, Validation accuracy: 0.8724\n",
+      "2019-10-03 01:46:48.478074\n",
+      "Epoch 48:\n",
+      "176\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Assignment 3(a)\n",
